# naive

./: .readthedocs.yaml  LICENSE  MANIFEST.in  README.md  README.txt  __init__.py  atom.py  binary_vector.py  build_all.bat  conf.py  const.py  ctmc.py  finite_set.py  full_process.bat  index.md  index.rst  kripke_samples.py  kripke_structure.py  kripke_structure.rst  labeling_function.py  lts.py  mstr.py  output.py  pyproject.toml  real_matrix.py  real_vector.py  requirements.txt  samples.py  setup.cfg  setup.py  setup.py.old  state.py  stochastic_matrix.py  test  test_atom.py  test_binary_matrix.py  test_binary_vector.py  test_dtmc.py  test_finite_set.py  test_kripke_structure.py  (+7 more)
_autosummary/: kripke_structure.rst
_trashcan/: _class_constant.py  binary_array.py  binary_matrix.py  binary_vector.py  conf.py  ctmc.py  dtmc.py  finite_set.py  hello_world.rst  kripke_structure.py  kripke_structure_section.rst  labeling_function.py  lts.py  output.py  real_matrix.py  real_vector.py  samples.py  state.py  stochastic_matrix.py  test_atom.py  test_binary_matrix.py  test_binary_vector.py  test_dtmc.py  test_finite_set.py  test_labeling_function.py  test_lts.py  test_state.py  test_stochastic_matrix.py  test_transition_matrix.py  transition_matrix.py  type_library.rst  utils.py
auto/: auto.bat  auto.ps1  full_process.bat  reinstall_package.bat  set_syspath.bat  set_syspath.py
ci/: 050_increment_version.bat  100_build_package.bat  110_git_commit.bat  120_git_push.bat  200_pip_install_requirements.bat  300_pip_install_local_package.bat  400_build_documentation.bat  build_documentation.bat  create_symlink.bat.tobedeleted  full_process.bat  increment_minor_version.bat  local_install.bat  pip_install_local_package.bat  pip_install_requirements.bat  pip_reinstall.bat  pip_uninstall.bat  reinstall_package.bat  set_syspath.bat  set_syspath.py
docs/: Makefile  naive
naive/: __init__.py  binary_algebra.py  conf.py  hello_world.py  index.rst  kripke_structure.py  kripke_structure.py.txt  linear_algebra.py  set_algebra.py  setup.py  type_library.py
naive.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
samples/: binary_vector_equal_sample_1.py  binary_vector_equal_sample_2.py  binary_vector_init_1.py  finite_set_sample_1.py  kripke_samples.py  set_sample_1.py
sandbox/: Facets.py  Untitled.ipynb  _class_n_key.py  ba1_conjunction.tx  notebook_dot.ipynb  sanbox2.py  sandbox1.py  sandbox3.py  sandbox4.py  test_install_naive_from_jupyter.ipynb  textX_test_1.py  textX_test_2.py  textX_test_3.py
source/: conf.py  index.rst
src/: __main__.py
tests/: test  test_ba.py  test_ba1.py  test_ba1_conjunction.py  test_ba1_disjunction.py  test_ba1_falsum.py  test_ba1_negation.py  test_ba1_truth.py  test_ba_b_2.py  test_ba_function_conjunction.py  test_ba_function_conjunction_b2_b.py  test_ba_function_disjunction.py  test_ba_function_disjunction_b2_b.py  test_ba_function_material_equivalence.py  test_ba_function_material_equivalence_b2_b.py  test_ba_function_negation.py  (+43 more)
(+368 files in other folders)
