[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "naive"
#version = "0.3"
description = "A beautiful package"
#dynamic = ["version", "description"]
dynamic = ["version"]
authors = [{name = "David Doret"}]
maintainers = [{name = "David Doret"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Mathematics"]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.13.3",
    "nptyping>=2.1.3",
    "typing>=3.7.4.3",
    "dataclasses>=0.6"]

#[tool.setuptools.dynamic]
#version = {attr = "naive.__version__"}
#readme = {file = ["README.rst", "USAGE.rst"]}

[project.urls]
Homepage = "https://github.com/daviddoret/naive"
Documentation = "https://naive.readthedocs.io/en/latest/index.html"
"Bug Tracker" = "https://github.com/scikit-hep/package/issues"
Discussions = "https://github.com/scikit-hep/package/discussions"
Changelog = "https://package.readthedocs.io/en/latest/changelog.html"



