[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.bumpver]
current_version = "2022.1001-alpha"
version_pattern = "YYYY.BUILD[-TAG]"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
]
"README.md" = [
    "{version}",
    "{pep440_version}",
]
"src/naive/__init__.py" = ["{version}"]
