[metadata]
name = naive
description = a package that meows
version = attr: naive.__version__
author = David Doret
url = https://github.com/daviddoret/naive
long_description = file: README.md
long_description_content_type = text/markdown
keywords = naive, model checking
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Mathematics


[options]
packages = find:
install_requires =
    numpy>=1.13.3
    nptyping>=2.1.3
    typing>=3.7.4.3
    dataclasses>=0.6
package_dir=
    =src

[options.packages.find]
where=src


